package net.combatserver.protobuf; 
option optimize_for = SPEED;  
message RegionMessageRequestData{
	required string message = 1;//ÄÚÈİ
}